--- a/src/sdg/components/ChoiceGroup/_selectionButtons.html
+++ b/src/sdg/components/ChoiceGroup/_selectionButtons.html
@@ -2,91 +2,131 @@
 <h3>Exemples</h3>
 
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
-    <qc-radio-group legend="Choisissez une option :"
+    <qc-choice-group legend="Sélectionnez une option :"
                     name="ex-radio-select"
                     tiled
                     column-count="2"
     >
-        <qc-radio-button
-                label="Option 1"
-                value="1"
-                checked
-                description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 2"
-                value="2"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 3 (désactivée)"
-                value="3"
-                disabled
-        ></qc-radio-button>
-    </qc-radio-group>
+        <label>
+            <input type="radio"
+                   value="1"
+                   checked
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+                <span class="qc-tile-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
+            </span>
+        </label>
+
+        <label>
+            <input type="radio"
+                   value="2"
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="3"
+                   disabled
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+        </label>
+    </qc-choice-group>
 </qc-doc-exemple>
 
 <qc-doc-exemple
         caption="Exemple d’un groupe de cases à cocher au format de boutons de sélection avec différents états"
 >
-    <qc-checkbox-group
+    <qc-choice-group
             name="exemple-checkbox-select"
             legend="Sélectionnez vos options"
             tiled
             column-count="2">
-        <qc-checkbox
-                label="Option 1"
-                description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
-                value="1"
-        ></qc-checkbox>
-        <qc-checkbox
-                label="Option 2 cochée par défaut"
-                checked="true"
-                value="2"
-        ></qc-checkbox>
-        <qc-checkbox
-                label="Option 3 désactivée"
-                disabled="true"
-                value="3"
-        ></qc-checkbox>
-    </qc-checkbox-group>
+        <label>
+            <input type="checkbox"
+                   value="1"
+                   checked
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+                <span class="qc-tile-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
+            </span>
+        </label>
+
+        <label>
+            <input type="checkbox"
+                   value="2"
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+        </label>
+        <label>
+            <input type="checkbox"
+                   value="3"
+                   disabled
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+        </label>
+    </qc-choice-group>
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection sur une rangée">
-    <qc-radio-group legend="Choisissez une option :"
+    <qc-choice-group legend="Choisissez une option :"
                     name="ex-radio-select-inline"
                     tiled
                     inline
     >
-        <qc-radio-button
-                label="1"
-                value="1"
-                checked
-        ></qc-radio-button>
-        <qc-radio-button
-                label="2"
-                value="2"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="3"
-                value="3"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="4"
-                value="4"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="5"
-                value="5"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="6"
-                value="6"
-        ></qc-radio-button>
-    </qc-radio-group>
+        <label>
+            <input type="radio"
+                   value="1"
+                   checked
+            />
+            <span>1</span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="2"
+            />
+            <span>2</span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="3"
+            />
+            <span>3</span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="4"
+            />
+            <span>4</span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="5"
+            />
+            <span>5</span>
+        </label>
+        <label>
+            <input type="radio"
+                   value="6"
+                   disabled
+            />
+            <span>6</span>
+        </label>
+
+    </qc-choice-group>
 </qc-doc-exemple>
 
 <h3 id="selection-button-attributes">Documentation technique</h3>
-<p>Ces attributs sont appliqués à <code>qc-radio-group</code> et <code>qc-checkbox-group</code></p>
+<p>Ces attributs sont appliqués à <code>qc-choice-group</code> et <code>qc-choice-group</code></p>
 <div class="table-overflow">
     <table class="qc-table qc-striped">
         <thead>
