Application de width 100% à tous les éléments label enfants des boutons de sélection en grille

--- a/src/sdg/components/Fieldset/_fieldset.scss
+++ b/src/sdg/components/Fieldset/_fieldset.scss
@@ -52,7 +52,7 @@ $invalid-border-width: 2px;
     grid-template-columns: 1fr;
   }
 
-  & > .qc-selection-button {
+  & > * .qc-selection-button {
     width: 100%
   }
 }
