--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2305,7 +2305,7 @@ input[type=radio]:checked.qc-compact::before {
     grid-template-columns: 1fr;
   }
 }
-.qc-field-elements-tiled > .qc-selection-button {
+.qc-field-elements-tiled > * .qc-selection-button {
   width: 100%;
 }
 
