Boutons radio et cases à cocher - doc

--- a/src/sdg/components/ChoiceGroup/_selectionButtons.html
+++ b/src/sdg/components/ChoiceGroup/_selectionButtons.html
@@ -1,5 +1,5 @@
-<h2 id="selection-button">Boutons de sélection</h2>
-<h3>Exemples</h3>
+<h3 id="selection-button">Boutons de sélection</h3>
+
 
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
     <qc-choice-group legend="Sélectionnez une option :"
@@ -125,45 +125,6 @@
     </qc-choice-group>
 </qc-doc-exemple>
 
-<h3 id="selection-button-attributes">Documentation technique</h3>
-<p>Ces attributs sont appliqués à <code>qc-choice-group</code> et <code>qc-choice-group</code></p>
-<div class="table-overflow">
-    <table class="qc-table qc-striped">
-        <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Valeur attendue</th>
-            <th>Valeur par défaut</th>
-            <th>Description</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>tiled</td>
-            <td>na</td>
-            <td>na</td>
-            <td>Affiche les boutons radio au format de boutons de sélection dans une grille</td>
-        </tr>
-        <tr>
-            <td>column-count</td>
-            <td>Nombre</td>
-            <td>1</td>
-            <td>
-                Nombre de colonnes de la grille de boutons de sélection.
-                <br/> Si la fenêtre est au format mobile (<code>--qc-breakpoint-sm</code>), la grille passe automatiquement à une colonne.
-            </td>
-        </tr>
-        <tr>
-            <td>inline</td>
-            <td>na</td>
-            <td>na</td>
-            <td>Affiche les boutons de sélection sur une rangée</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<h4>Documentation technique</h4>
+<p>Voir <a href="#choice-group-doc">la documentation technique du composant qc-choice-group</a></p>
 
-<p>
-    Pour les attributs spécifiques à chaque variante de boutons de sélection, voir les attributs des
-    <a href="#radio-button-attributes">boutons radio</a> et des <a href="#checkbox-attributes">cases à cocher</a>.
-</p>
