Liste déroulante - amélioration et corrections.

--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -149,13 +149,13 @@
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: var(--qc-spacer-sm);
   --qc-spacer-list-item-mb: var(--qc-spacer-sm);
-  --qc-size-max-width-sm: 6.3rem;
-  --qc-size-max-width-md: 15.6rem;
-  --qc-size-max-width-lg: 24.9rem;
-  --qc-size-max-width-xl: 52.8rem;
-  --qc-size-max-width-xxl: 82.5rem;
-  --qc-size-input-max-width: var(--qc-size-max-width-lg);
-  --qc-size-textarea-max-width: var(--qc-size-max-width-xl);
+  --qc-size-max-width-xs: 6.3rem;
+  --qc-size-max-width-sm: 15.6rem;
+  --qc-size-max-width-md: 24.9rem;
+  --qc-size-max-width-lg: 52.8rem;
+  --qc-size-max-width-xl: 82.5rem;
+  --qc-size-input-max-width: var(--qc-size-max-width-md);
+  --qc-size-textarea-max-width: var(--qc-size-max-width-lg);
   --qc-size-textarea-min-height: 10.8rem;
   --qc-size-search-bar-max-width: 64rem;
   --qc-grid-gutter: 32px;
