--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -24,7 +24,7 @@
 <div style="height: 40rem;">
 <qc-dropdown-list
         id="dropdown-list-single-choice-no-scroll"
-        label="Choix unique avec recherche:"
+        label="Choix unique avec recherche"
         enable-search
 >
   <qc-option value="1" selected>Option 1</qc-option>
@@ -48,7 +48,7 @@
 
 <qc-dropdown-list
         id="dropdown-list-multiple-choices"
-        label="Choix multiples:"
+        label="Choix multiples"
         multiple
 >
   <qc-option value="1">Option 1</qc-option>
@@ -71,7 +71,7 @@
 
 <qc-dropdown-list
         id="dropdown-list-invalid"
-        label="État invalide:"
+        label="État invalide"
         invalid
 >
   <qc-option value="1">Option 1</qc-option>
@@ -94,7 +94,7 @@
 
 <qc-dropdown-list
         id="dropdown-list-disabled"
-        label="Désactivé:"
+        label="Désactivé"
         disabled
 ></qc-dropdown-list>
 
