--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -4,7 +4,7 @@
   <form id="formulaire-champs-textes">
     <qc-textfield
             label="Nom complet"
-            size="lg"
+            size="md"
             required
     >
       <input type="text"
@@ -15,7 +15,7 @@
 
     <qc-textfield
             label="Champ désactivé"
-            size="lg"
+            size="md"
     >
       <input type="text"
              name="disabled-field"
@@ -27,7 +27,7 @@
     <div class="qc-textfield-row">
       <qc-textfield
               label="Téléphone"
-              size="md"
+              size="sm"
               required
         ><input type="text"
                 name="telephone"
@@ -36,7 +36,7 @@
 
       <qc-textfield
               label="Poste"
-              size="sm"
+              size="xs"
       >
         <input type="text"
                name="poste"
@@ -47,7 +47,7 @@
     <qc-textfield
             label="Champ de texte multiligne"
             description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-            size="xl"
+            size="lg"
             max-length="10"
             required
     >
@@ -110,7 +110,7 @@
     </tr>
     <tr>
       <td>size</td>
-      <td>"sm", "md", "lg", "xl", "xxl"</td>
+      <td>"xs", "sm", "md", "lg", "xl"</td>
       <td>lg pour les champs simple (<code>input</code>) <br>
         xl pour les champs multilignes (<code>textarea</code>),
       </td>
