--- a/src/sdg/components/TextField/textFieldTest.html
+++ b/src/sdg/components/TextField/textFieldTest.html
@@ -1,81 +1,124 @@
-<qc-textfield name="text-sm"
-              label="Petit"
-              size="sm"
-              placeholder="sm"></qc-textfield>
+<qc-textfield label="Petit"
+              size="sm">
+    <input type="text"
+           name="text-sm"
+           placeholder="25"
+    />
+</qc-textfield>
 
-<qc-textfield name="text-md"
-              label="Moyen"
-              size="md"
-              placeholder="Texte md"></qc-textfield>
+<qc-textfield size="md">
+    <label for="text-md">Moyen</label>
+    <input type="text"
+           id="text-md"
+           name="text-md"
+           placeholder="25"
+    />
+</qc-textfield>
 
-<qc-textfield name="text-lg"
-              label="Large"
+<qc-textfield label="Large"
               size="lg"
-              placeholder="Long placeholder lorem ipsum dolor sit amet"
               invalid
-></qc-textfield>
+>
+    <input type="text"
+           name="text-lg"
+           placeholder="Long placeholder lorem ipsum dolor sit amet"
+    />
+</qc-textfield>
 
 <qc-textfield name="text-xl"
               label="Très large"
               size="xl"
               placeholder="Long placeholder lorem ipsum dolor sit amet"
-              required></qc-textfield>
+              required>
+    <input type="text"
+           name="text-xl"
+    />
+</qc-textfield>
 
-<qc-textfield name="text-xxl"
-              label="Extra large"
-              size="xxl"
-              placeholder="Long placeholder lorem ipsum dolor sit amet"
-              disabled=""></qc-textfield>
+<qc-textfield
+        label="Extra large"
+        size="xxl"
+
+>
+    <input type="text"
+           placeholder="Long placeholder lorem ipsum dolor sit amet"
+           name="text-xxl"
+           disabled
+    />
+</qc-textfield>
 
 <div class="qc-textfield-row">
-    <qc-textfield name="combo-1"
-                  label="Combiné 1"
-                  size="md"
-    ></qc-textfield>
+    <qc-textfield
+            label="Combiné 1"
+            size="md"
+    >
+        <input type="text"
+               placeholder="Long placeholder lorem ipsum dolor sit amet"
+               name="combo-1"
+        />
+    </qc-textfield>
 
-    <qc-textfield name="combo-2"
-                  label="Combiné 2"
-                  size="sm"
-                  ></qc-textfield>
+    <qc-textfield
+            label="Combiné 2"
+            size="sm"
+    >
+        <input type="text"
+               name="combo-2"
+        />
+    </qc-textfield>
 </div>
 <div class="qc-textfield-row">
-    <qc-textfield name="invalid-combo-1"
-                  label="Combiné 1 invalide"
-                  size="md"
-                  invalid
-                  invalid-text="Lorsque combinés, le message d'erreur décale les champs…"
-    ></qc-textfield>
+    <qc-textfield
+            label="Combiné 1 invalide"
+            size="md"
+            invalid
+            invalid-text="Lorsque combinés, le message d'erreur décale les champs…"
+    >
+        <input type="text"
+               name="invalid-combo-1"
+        />
+    </qc-textfield>
 
-    <qc-textfield name="invalid-combo-2"
-                  label="Combiné 2"
-                  size="sm"
-    ></qc-textfield>
+    <qc-textfield
+            label="Combiné 2"
+            size="sm"
+    >
+        <input type="text"
+               name="invalid-combo-2"
+        />
+    </qc-textfield>
 
 </div>
 
-<qc-textfield name="zone-xl"
-              label="Commentaires"
-              description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
-              size="xl"
-              display="area"></qc-textfield>
+<qc-textfield
+        label="Commentaires"
+        description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
+        size="xl"
+>
+    <textarea name="zone-xl"></textarea>
+</qc-textfield>
 
-<qc-textfield name="zone-xxl"
-              label="Suggestions"
+<qc-textfield
+        label="Suggestions"
+        description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
+        size="xxl"
+        max-length="50"
+        required
+>
+    <textarea name="zone-xxl"></textarea>
+</qc-textfield>
+
+<qc-textfield label=""
               description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
               size="xxl"
-              display="area"
               max-length="50"
-              required=""
-              invalid-text="Message d'erreur personnalisé"></qc-textfield>
-
-<qc-textfield name="zone-xxl"
-              label="Suggestions"
-              description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
-              size="xxl"
-              display="area"
-              max-length="50"
-              required=""
+              required
               invalid-text="Message d'erreur personnalisé"
               invalid
-></qc-textfield>
+>
+    <label for="zone-xxl-invalid">Suggestions</label>
+    <textarea name="zone-xxl-invalid"
+              id="zone-xxl-invalid"
+    ></textarea>
+</qc-textfield>
 
