Revert "qc-required - Ajustement suite à rebase"
This reverts commit f9293677776f7a42f1626b9284509133206e3c0c.

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1139,6 +1139,7 @@ hr {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
   color: var(--qc-color-red-regular);
+  margin-left: 0.385rem;
 }
 
 .qc-disabled {
