--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1139,6 +1139,7 @@ hr {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
   color: var(--qc-color-red-regular);
+  margin-left: 0.385rem;
 }
 
 .qc-disabled {
