--- a/src/sdg/components/TextField/textFieldTest.html
+++ b/src/sdg/components/TextField/textFieldTest.html
@@ -1,7 +1,9 @@
 <qc-textfield name="text-sm"
               label="Petit"
               size="sm"
-              placeholder="sm"></qc-textfield>
+              placeholder="sm">
+
+</qc-textfield>
 
 <qc-textfield name="text-md"
               label="Moyen"
