--- a/src/sdg/components/TextField/textFieldTest.html
+++ b/src/sdg/components/TextField/textFieldTest.html
@@ -91,10 +91,10 @@
 </div>
 
 <qc-textfield
-        label="Commentaires"
-        description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
         size="xl"
 >
+    <label>Commentaires</label>
+    <div     class="qc-textfield-description">Vous pouvez entrer des commentaires dans la zone de texte ci-dessous.</div>
     <textarea name="zone-xl"></textarea>
 </qc-textfield>
 
