--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
-.qc-textfield, .qc-search-input, .qc-search-input button, .qc-search-bar, .qc-search-bar button {
+.qc-search-input, .qc-search-input button, .qc-search-bar, .qc-search-bar button {
   position: relative;
   z-index: 10;
   background: transparent;
   border: 0;
 }
-.qc-textfield::before, .qc-search-input::before, .qc-search-input button::before, .qc-search-bar::before, .qc-search-bar button::before {
+.qc-search-input::before, .qc-search-input button::before, .qc-search-bar::before, .qc-search-bar button::before {
   position: absolute;
   display: block;
   content: "";
@@ -13,10 +13,10 @@
   inset: 0;
   z-index: -5;
 }
-.qc-textfield:has(input:focus), .qc-search-input:has(input:focus), .qc-search-input button:has(input:focus), .qc-search-bar:has(input:focus), .qc-search-bar button:has(input:focus), .qc-textfield:focus, .qc-search-input:focus, .qc-search-input button:focus, .qc-search-bar:focus, .qc-search-bar button:focus, .qc-textfield:has(textarea:focus), .qc-search-input:has(textarea:focus), .qc-search-input button:has(textarea:focus), .qc-search-bar:has(textarea:focus), .qc-search-bar button:has(textarea:focus) {
+.qc-search-input:has(input:focus), .qc-search-input button:has(input:focus), .qc-search-bar:has(input:focus), .qc-search-bar button:has(input:focus), .qc-search-input:focus, .qc-search-input button:focus, .qc-search-bar:focus, .qc-search-bar button:focus, .qc-search-input:has(textarea:focus), .qc-search-input button:has(textarea:focus), .qc-search-bar:has(textarea:focus), .qc-search-bar button:has(textarea:focus) {
   outline: 2px solid var(--qc-color-formfield-focus-outline);
 }
-.qc-textfield:has(input:focus)::before, .qc-search-input:has(input:focus)::before, .qc-search-input button:has(input:focus)::before, .qc-search-bar:has(input:focus)::before, .qc-search-bar button:has(input:focus)::before, .qc-textfield:focus::before, .qc-search-input:focus::before, .qc-search-input button:focus::before, .qc-search-bar:focus::before, .qc-search-bar button:focus::before, .qc-textfield:has(textarea:focus)::before, .qc-search-input:has(textarea:focus)::before, .qc-search-input button:has(textarea:focus)::before, .qc-search-bar:has(textarea:focus)::before, .qc-search-bar button:has(textarea:focus)::before {
+.qc-search-input:has(input:focus)::before, .qc-search-input button:has(input:focus)::before, .qc-search-bar:has(input:focus)::before, .qc-search-bar button:has(input:focus)::before, .qc-search-input:focus::before, .qc-search-input button:focus::before, .qc-search-bar:focus::before, .qc-search-bar button:focus::before, .qc-search-input:has(textarea:focus)::before, .qc-search-input button:has(textarea:focus)::before, .qc-search-bar:has(textarea:focus)::before, .qc-search-bar button:has(textarea:focus)::before {
   border: 2px solid var(--qc-color-formfield-focus-border);
 }
 
@@ -1139,7 +1139,7 @@ hr {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
   color: var(--qc-color-red-regular);
-  margin-left: 0.385rem;
+  margin-left: 0.8rem;
 }
 
 .qc-disabled {
@@ -2385,133 +2385,117 @@ input[type=checkbox]:checked::after {
   outline: none;
 }
 
-qc-textfield {
+qc-textfield,
+.qc-textfield {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+qc-textfield .qc-description,
+.qc-textfield .qc-description {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  color: var(--qc-color-blue-dark);
+}
+qc-textfield .qc-description:has(~ :disabled),
+.qc-textfield .qc-description:has(~ :disabled) {
+  color: var(--qc-color-grey-regular);
+}
+
+[size=sm] > input,
+[size=sm] > textarea,
+[size=sm] > .qc-textfield-charcount {
+  max-width: 6.3rem;
+}
+[size=md] > input,
+[size=md] > textarea,
+[size=md] > .qc-textfield-charcount {
+  max-width: 15.6rem;
+}
+[size=lg] > input,
+[size=lg] > textarea,
+[size=lg] > .qc-textfield-charcount {
+  max-width: 24.9rem;
+}
+[size=xl] > input,
+[size=xl] > textarea,
+[size=xl] > .qc-textfield-charcount {
+  max-width: 52.8rem;
+}
+[size=xxl] > input,
+[size=xxl] > textarea,
+[size=xxl] > .qc-textfield-charcount {
+  max-width: 82.5rem;
+}
+
+.qc-textfield input, qc-textfield input,
+.qc-textfield textarea,
+qc-textfield textarea {
   display: block;
   width: 100%;
-}
-
-.qc-label {
-  margin-bottom: 0.4rem;
-}
-
-.qc-textfield {
-  position: relative;
-}
-.qc-textfield::before {
-  border: 1px solid var(--qc-color-formfield-border);
-}
-.qc-textfield input[type=text],
-.qc-textfield textarea {
-  display: block;
   position: relative;
   color: var(--qc-color-text-primary);
-  width: 100%;
-  background: transparent;
-  padding: 0.8rem 0.8rem;
-  border: 0;
+  padding: 0.8rem;
   text-overflow: ellipsis;
   overflow: hidden;
   margin-top: 0.4rem;
+  border: 1px solid var(--qc-color-formfield-border);
 }
-.qc-textfield input[type=text]::-moz-placeholder, .qc-textfield textarea::-moz-placeholder {
+.qc-textfield input::-moz-placeholder, qc-textfield input::-moz-placeholder, .qc-textfield textarea::-moz-placeholder, qc-textfield textarea::-moz-placeholder {
   color: var(--qc-color-grey-medium);
   font-weight: normal;
 }
-.qc-textfield input[type=text]::placeholder,
-.qc-textfield textarea::placeholder {
+.qc-textfield input::placeholder, qc-textfield input::placeholder,
+.qc-textfield textarea::placeholder,
+qc-textfield textarea::placeholder {
   color: var(--qc-color-grey-medium);
   font-weight: normal;
 }
-.qc-textfield input[type=text]:focus, .qc-textfield input[type=text]:focus-visible,
+.qc-textfield input:focus, .qc-textfield input:focus-visible, qc-textfield input:focus, qc-textfield input:focus-visible,
 .qc-textfield textarea:focus,
-.qc-textfield textarea:focus-visible {
-  outline: none;
+.qc-textfield textarea:focus-visible,
+qc-textfield textarea:focus,
+qc-textfield textarea:focus-visible {
+  outline: 2px solid var(--qc-color-formfield-focus-outline);
+  border: 2px solid var(--qc-color-formfield-focus-border);
+  padding: 0.7rem;
 }
-.qc-textfield input[type=text]:focus::-moz-placeholder, .qc-textfield input[type=text]:focus-visible::-moz-placeholder, .qc-textfield textarea:focus::-moz-placeholder, .qc-textfield textarea:focus-visible::-moz-placeholder {
-  color: transparent;
+.qc-textfield input:disabled, qc-textfield input:disabled,
+.qc-textfield textarea:disabled,
+qc-textfield textarea:disabled {
+  cursor: not-allowed;
+  background-color: var(--qc-color-grey-pale);
+  border: 1px solid var(--qc-color-grey-regular);
 }
-.qc-textfield input[type=text]:focus::placeholder, .qc-textfield input[type=text]:focus-visible::placeholder,
-.qc-textfield textarea:focus::placeholder,
-.qc-textfield textarea:focus-visible::placeholder {
-  color: transparent;
+[invalid] > input,
+[invalid] > textarea {
+  border-color: var(--qc-color-red-regular);
+  border-width: 2px;
+  padding: 0.7rem;
 }
-.qc-textfield textarea {
+
+.qc-textfield textarea, qc-textfield textarea {
   min-height: 10.8rem;
   resize: vertical;
 }
-.qc-textfield--sm {
-  max-width: 6.3rem;
-}
-.qc-textfield--md {
-  max-width: 15.6rem;
-}
-.qc-textfield--lg {
-  max-width: 24.9rem;
-}
-.qc-textfield--xl {
-  max-width: 52.8rem;
-}
-.qc-textfield--xxl {
-  max-width: 82.5rem;
-}
-.qc-textfield.error::before {
-  border-color: var(--qc-color-red-regular);
-  border-width: 2px;
-}
 
-.qc-textfield-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 3.2rem;
-}
-.qc-textfield-container.qc-disabled label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
-}
-.qc-textfield-container.qc-disabled .qc-textfield-description {
-  color: var(--qc-color-grey-regular);
-}
-
-.qc-textfield-required {
-  color: var(--qc-color-red-regular);
-  margin-left: 0.4rem;
-}
-
-.qc-textfield-description {
+.qc-description {
   font-size: var(--qc-font-size-sm);
   color: var(--qc-color-blue-dark);
   line-height: 2rem;
-}
-
-.qc-textfield.disabled::before {
-  border: 1px solid var(--qc-color-grey-regular);
-  background-color: var(--qc-color-grey-pale);
-}
-.qc-textfield.disabled input[type=text],
-.qc-textfield.disabled textarea {
-  color: var(--qc-color-grey-medium);
-  cursor: not-allowed;
 }
 
 .qc-textfield-charcount {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
   text-align: right;
   margin-top: 0.4rem;
   color: var(--qc-color-blue-dark);
-  font-size: var(--qc-font-size-sm);
-  line-height: 2rem;
 }
-.qc-textfield-charcount.max-reached {
+.qc-textfield-charcount.qc-max-reached {
   color: var(--qc-color-red-regular);
-  font-weight: bold;
-}
-
-.qc-textfield-row {
-  display: flex;
-  gap: 3.2rem;
-}
-.qc-textfield-row > qc-textfield {
-  display: block;
-  width: auto;
+  font-weight: var(--qc-font-weight-content-bold);
 }
 
 .qc-form-error {
@@ -2528,8 +2512,7 @@ qc-textfield {
   --error-icon-width: 2.4rem!important;
   --error-icon-height: 2.1rem!important;
 }
-
-.qc-textfield-container .qc-form-error {
+.qc-form-error.qc-xs-mt {
   margin-top: var(--qc-spacer-xs);
 }
 
@@ -2617,12 +2600,17 @@ qc-textfield {
 .qc-label {
   font-weight: var(--qc-font-weight-content-medium);
   display: block;
+  margin-bottom: 0.4rem;
 }
-.qc-label.qc-label-compact {
+.qc-label.qc-compact {
   font-size: var(--qc-font-size-sm);
 }
-.qc-label.qc-label-bold {
+.qc-label.qc-bold {
   font-weight: var(--qc-font-weight-content-bold);
+}
+.qc-label:has(~ :disabled) {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
 }
 
 .qc-dropdown-list-multiple {
