--- a/src/sdg/components/ChoiceGroup/_choiceGroup.scss
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.scss
@@ -2,6 +2,7 @@
 
 %check-row {
   display: flex;
+  max-width: fit-content;
   align-items: start;
   margin: 0;
   cursor: pointer;
@@ -79,13 +80,11 @@ qc-checkbox {
   }
 }
 
-
 [tiled] {
   label {
-    //@extend %check-row;
     @include qc-formcontrol-box();
     padding: token-value(spacer, sm);
-    width: 100%;
+    min-width: 100%;
 
     input[type="radio"],
     input[type="checkbox"] {
@@ -114,8 +113,9 @@ qc-checkbox {
       border-color: token-value(color, grey, light);
     }
   }
+
   &[inline] label {
-    width: auto;
+    min-width: auto;
   }
 
 }
