--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
@@ -7,6 +7,7 @@ $border: 1;
 
 .qc-switch {
   display: flex;
+  width: fit-content;
   margin: 0;
   gap: token-value(spacer, sm);
   position: relative;
